Mensagem do commit

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="google-adsense-account" content="ca-pub-6616852784066177">
     <title>Shrty</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="favicon_io/favicon.ico" type="image/x-icon">
     <script>
     function myFunction(event) {
