--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
     <nav style="background-color: white; padding: 30px; position: fixed; top: 0; left: 0; width: 100%; display: flex; justify-content: center; align-items: center; gap: 5%; font-family: 'Poppins', sans-serif; font-weight: 500;">
         <a>Sobre-nos</a>
-        <a>Política de Privacidade</a>
+        <a>Política de Privacidadej</a>
         <a>Termos de Uso</a>
     </nav>
     <br/>
