--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 </head>
 <body>
     <nav style="background-color: white; padding: 30px; position: fixed; top: 0; left: 0; width: 100%; display: flex; justify-content: center; align-items: center; gap: 5%; font-family: 'Poppins', sans-serif; font-weight: 500;">
-        <a>Sobre-nos</a>
-        <a>Política de Privacidadej</a>
-        <a>Termos de Uso</a>
+        <a href="/index.html">Home</a>
+        <a href="pages/privacidade.html">Política de Privacidade</a>
+        <a href="/pages/termosdeuso.html">Termos de Uso</a>
     </nav>
     <br/>
     <br/>
@@ -84,9 +84,9 @@ Com o encurtador de URL é possível criar um link encurtado fácil de compartil
             <li class="titleli">Política</li>
           <br>
           <br>
-            <a href="" style="color: rgba(233, 233, 233, 0.812); text-decoration: none;"> <li class="liser">Política de Privacidade</li></a>
+            <a href="/pages/privacidade.html" style="color: rgba(233, 233, 233, 0.812); text-decoration: none;"> <li class="liser">Política de Privacidade</li></a>
           <br>
-        <a href="" style="color: rgba(233, 233, 233, 0.812); text-decoration: none;">    <li class="liser">Termos de Uso</li></a>
+        <a href="/pages/termosdeuso.html" style="color: rgba(233, 233, 233, 0.812); text-decoration: none;">    <li class="liser">Termos de Uso</li></a>
           </ul>
 
           <ul style="list-style: none;">
