--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="favicon_io/favicon.ico" type="image/x-icon">
+    <meta name="google-adsense-account" content="ca-pub-9934969213706976">
     <script>
     function myFunction(event) {
         event.preventDefault();  // Previne o comportamento padrão de submissão do formulário
