--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
     </script>
 </head>
+<script type='text/javascript' src='//pl26316905.effectiveratecpm.com/de/72/41/de724167a4038ed5145d76e542f5aa5d.js'></script>
 <body>
     <nav style="background-color: white; padding: 30px; position: fixed; top: 0; left: 0; width: 100%; display: flex; justify-content: center; align-items: center; gap: 5%; font-family: 'Poppins', sans-serif; font-weight: 500;">
         <a href="/index.html">Home</a>
