--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="google-adsense-account" content="ca-pub-9934969213706976">
     <title>Shrty</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9934969213706976"
+     crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="favicon_io/favicon.ico" type="image/x-icon">
     <meta name="google-adsense-account" content="ca-pub-9934969213706976">
