--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="favicon_io/favicon.ico" type="image/x-icon">
     <meta name="google-adsense-account" content="ca-pub-9934969213706976">
+    <meta name="google-site-verification" content="DbiEakaF3Pi23dDVMJHzkusD1g2mScQTS_L1OSpfDc0" />
     <script type='text/javascript' src='//pl26317228.effectiveratecpm.com/f8/46/c2/f846c2422f7c9c454ab31d54aea9a5b7.js'></script>
 </head>
 <body>
