--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9934969213706976"
      crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="favicon_io/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/favicon_io/apple-touch-icon.png" type="image/x-icon">
     <meta name="google-adsense-account" content="ca-pub-9934969213706976">
     <meta name="google-site-verification" content="DbiEakaF3Pi23dDVMJHzkusD1g2mScQTS_L1OSpfDc0" />
     <script type='text/javascript' src='//pl26317228.effectiveratecpm.com/f8/46/c2/f846c2422f7c9c454ab31d54aea9a5b7.js'></script>
@@ -27,9 +27,9 @@
     </script>
     <script type="text/javascript" src="//www.highperformanceformat.com/5589db14bfaeac53720f9d439ca78fa5/invoke.js"></script>
     <nav style="background-color: white; padding: 30px; position: fixed; top: 0; left: 0; width: 100%; display: flex; justify-content: center; align-items: center; gap: 5%; font-family: 'Poppins', sans-serif; font-weight: 500;">
-        <a href="/index.html">Home</a>
-        <a href="pages/privacidade.html">Política de Privacidade</a>
-        <a href="/pages/termosdeuso.html">Termos de Uso</a>
+        <a href="index.html">Home</a>
+        <a href="privacidade.html">Política de Privacidade</a>
+        <a href="termosdeuso.html">Termos de Uso</a>
     </nav>
     <br/>
     <br/>
@@ -80,9 +80,9 @@ Com o encurtador de URL é possível criar um link encurtado fácil de compartil
             <li class="titleli">Política</li>
           <br>
           <br>
-            <a href="/pages/privacidade.html" style="color: rgba(233, 233, 233, 0.812); text-decoration: none;"> <li class="liser">Política de Privacidade</li></a>
+            <a href="privacidade.html" style="color: rgba(233, 233, 233, 0.812); text-decoration: none;"> <li class="liser">Política de Privacidade</li></a>
           <br>
-        <a href="/pages/termosdeuso.html" style="color: rgba(233, 233, 233, 0.812); text-decoration: none;">    <li class="liser">Termos de Uso</li></a>
+        <a href="termosdeuso.html" style="color: rgba(233, 233, 233, 0.812); text-decoration: none;">    <li class="liser">Termos de Uso</li></a>
           </ul>
 
           <ul style="list-style: none;">
