--- a/public/termosdeuso.html
+++ b/public/termosdeuso.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Termos de Uso</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="/favicon_io/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <nav style="background-color: white; padding: 30px; position: fixed; top: 0; left: 0; width: 100%; display: flex; justify-content: center; align-items: center; gap: 5%; font-family: 'Poppins', sans-serif; font-weight: 500;">
-        <a href="/index.html">Home</a>
-        <a href="/pages/privacidade.html">Política de Privacidade</a>
-        <a href="/pages/termosdeuso.html">Termos de Uso</a>
+        <a href="index.html">Home</a>
+        <a href="privacidade.html">Política de Privacidade</a>
+        <a href="termosdeuso.html">Termos de Uso</a>
     </nav>
     <br>
     <br>
